--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
           integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="assets/stylesheet.css">
 </head>
 <body>
 
 <div align="right">
 
+    <a href="/users" class="btn btn-secondary" role="button" aria-pressed="true">Users</a>
     <a href="/logout" class="btn btn-secondary" role="button" aria-pressed="true">Logout</a>
 </div>
 <div align="center" class="container" >
