--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
           integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/stylesheet.css" />
+    <link rel="stylesheet" href="assets/stylesheet.css" />
     <title>My App</title>
     <style>
         body  {
@@ -39,7 +39,7 @@
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password" placeholder="Password" required/>
             </div>
-            <button type="submit" class="btn">login</button>
+               <button type="submit" class="btn">login</button>
             <div align="center">
                 <br>
                 <br>
