--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -23,7 +23,7 @@
     <br>
     <button class="btn btn-primary" >Fetch Fun Data</button>
     <script src="js/fetch.js"></script>
-    <a href="//localhost:3000/chat" class="btn">Start Chatting</a>
+    <a href="http://3.122.216.56:3000/chat" class="btn">Start Chatting</a>
 
     <br> <br>
 </div>
