--- a/chat/chat.html
+++ b/chat/chat.html
@@ -24,7 +24,7 @@
 
 <body>
 <div align="right">
-    <a href="http://3.91.178.173:8080/activity" class="btn">Go back</a>
+    <a href="http://ec2-3-91-178-173.compute-1.amazonaws.com:8080/activity" class="btn">Go back</a>
 </div>
 <div class="c-container" >
     <header style="background-color: #32a852"  class="c-header">
