testing jquery and ajax

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -27,26 +27,12 @@
 </head>
 <body>
 
-<div class="container">
-    <header class="header">
-        <h1><i class="far fa-comments"></i>MY App</h1>
-    </header>
-    <main class="main">
-        <form action="auth" method="post">
-            <div class="form-control">
-                <label for="email">Email</label>
-                <input type="text" name="email" id="email" placeholder="Enter username / email" required/>
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password" placeholder="Password" required/>
-            </div>
-               <button type="submit" class="btn">login</button>
-            <div align="center">
-                <br>
-                <br>
-            <a href="/signup" class="btn">Sign Up</a>
-            </div>
-        </form>
-    </main>
+<div class="main">
+
 </div>
+
+<button id="btn_1"> Load Messages </button>
 </body>
+<script src="jquery-3.1.1.min.js"></script>
+<script src="logincontent.js"></script>
 </html>
