--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-          integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/stylesheet.css" />
     <title>My App</title>
@@ -31,8 +32,13 @@
 
 </div>
 
-<button id="btn_1"> Load Messages </button>
+<!-- <button id="btn_1"> Load Messages </button> -->
+<div align="center">
+    <button type="button" id="btn_1" class="btn btn-primary btn-lg">I agree with the Terms and Conditions: Continue</button>
+</div>
+
 </body>
 <script src="jquery-3.1.1.min.js"></script>
 <script src="logincontent.js"></script>
+
 </html>
