--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="assets/stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous"/>
@@ -12,7 +12,7 @@
     <title>My App</title>
     <style>
         body  {
-            background-image: url("image/image1.jpg");
+            background-color: #7cf7c0;
         }
     </style>
     <script>
@@ -34,7 +34,7 @@
 
 <!-- <button id="btn_1"> Load Messages </button> -->
 <div align="center">
-    <button type="button" id="btn_1" class="btn btn-primary btn-lg">I agree with the Terms and Conditions: Continue</button>
+    <button type="button" id="btn_1" class="btn btn-primary btn-lg">Press to continue</button>
 </div>
 
 </body>
