--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -22,12 +22,11 @@
     </header>
     <br>
     <button class="btn btn-primary" >Fetch Fun Data</button>
-    <script src="myajax.js"></script>
+    <script src="js/myajax.js"></script>
     <a href="http://ec2-3-91-178-173.compute-1.amazonaws.com:3000/chat" class="btn">Start Chatting</a>
 
     <br> <br>
 </div>
 <div align="center" id="content"></div>
-<div align="center" id="myData"></div>
 </body>
 </html>
