--- a/frontend/login.html
+++ b/frontend/login.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="assets/stylesheet.css" />
+
     <title>My App</title>
     <style>
         body  {
@@ -17,7 +17,7 @@
     </style>
     <script>
         function myFunction() {
-            alert("You need to log in first to visit this page !!");
+            alert("You need to log in first to visit this page");
         }
     </script>
     <div align="right">
@@ -38,7 +38,7 @@
 </div>
 
 </body>
-<script src="jquery-3.1.1.min.js"></script>
-<script src="logincontent.js"></script>
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/logincontent.js"></script>
 
 </html>
