--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,23 +3,18 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="assets/stylesheet.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+          integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="assets/stylesheet.css" />
     <title>My App</title>
-    <style>
-        body  {
-            background-color: #7cf7c0;
-        }
-    </style>
     <script>
         function myFunction() {
             alert("You need to log in first to visit this page");
         }
     </script>
+
     <div align="right">
         <button onclick="myFunction()" class="btn btn-primary">Fetch Fun Data</button>
         <button onclick="myFunction()" class="btn btn-primary">Start Chatting</button>
@@ -28,17 +23,26 @@
 </head>
 <body>
 
-<div class="main">
-
+<div class="container">
+    <header class="header">
+        <h1><i class="far fa-comments"></i>MY App</h1>
+    </header>
+    <main class="main">
+        <form action="auth" method="post">
+            <div class="form-control">
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email" placeholder="Enter username / email" required/>
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" placeholder="Password" required/>
+            </div>
+            <button type="submit" class="btn">login</button>
+            <div align="center">
+                <br>
+                <br>
+                <a href="/signup" class="btn">Sign Up</a>
+            </div>
+        </form>
+    </main>
 </div>
-
-<!-- <button id="btn_1"> Load Messages </button> -->
-<div align="center">
-    <button type="button" id="btn_1" class="btn btn-primary btn-lg">Press to continue</button>
-</div>
-
 </body>
-<script src="js/jquery-3.1.1.min.js"></script>
-<script src="js/logincontent.js"></script>
-
 </html>
